[package]
name = "qsi_pulse_reader_r"
version = "1.0.0"
edition = "2021"
description = "R bindings of library for reading pulses.bin files"
readme = "README.md"
repository = "https://github.com/QuantumSi/qsi-pulse-reader"
license-file = "LICENSE"


[lib]
crate-type = [ "staticlib" ]
name = "qsi_pulse_reader_r"

[dependencies]
extendr-api = "0.8"
extendr-macros = "0.8"
qsi_pulse_reader = { path = "./rust-core" }
